Arreglo el lector de preguntas y modifico las clases de preguntas